Fix Photosresize photos and reduce contrast on shouting banckgrounds

--- a/about.html
+++ b/about.html
@@ -129,7 +129,7 @@
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/sigu.jpg" class="card-img-top rounded-0" alt="lead conference organier" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/siguinwhiteblurredbg.png" class="card-img-top rounded-0" alt="lead conference organier"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Sigu Magwa</h5>
             <div class="card-text mb-3">
@@ -148,7 +148,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/chantelle.JPG" class="card-img-top rounded-0 " alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/chantelleblurredbg.png" class="card-img-top rounded-0 " alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Chantelle Kyendereta</h5>
             <div class="card-text mb-3">
@@ -167,7 +167,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/mush.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/mushblurredbg.png" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Collins Mucheru</h5>
             <div class="card-text mb-3">
@@ -186,7 +186,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/wanjiku.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/wanjikures.png" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Wanjiku Macharia</h5>
             <div class="card-text mb-3">
@@ -205,7 +205,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/okoth.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/okothres.png" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Okoth Kong'o</h5>
             <div class="card-text mb-3">
@@ -224,7 +224,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/20200817_093052 - Tracey Onim.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/TraceyOnimres.png" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Tracey Onim</h5>
             <div class="card-text mb-3">
@@ -243,7 +243,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/njoki.jpg" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Njoki Kiarie</h5>
             <div class="card-text mb-3">
@@ -262,7 +262,7 @@
       </div><!--//col-->
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/pops.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/apopi.png" class="card-img-top rounded-0" alt="logo"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Pollet Obuya</h5>
             <div class="card-text mb-3">
@@ -283,7 +283,7 @@
     <div class="row">
     <div class="col-12 col-md-6 col-lg-3 mb-4">
       <div class="card rounded-0">
-        <div class="speaker-img"><img src="assets/images/organisers/Snapchat-195934044 - Getty Orawo.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="speaker-img"><img src="assets/images/organisers/GettyOrawoblurredbg.png" class="card-img-top rounded-0" alt="logo"></div>
         <div class="card-body">
           <h5 class="card-title mb-2">Getty Orawo</h5>
           <div class="card-text mb-3">
@@ -302,7 +302,7 @@
     </div><!--//col-->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
       <div class="card rounded-0">
-        <div class="speaker-img"><img src="assets/images/organisers/IMG_1607 - Ruyonga Dan.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="speaker-img"><img src="assets/images/organisers/ruyongaDan.png" class="card-img-top rounded-0" alt="logo" ></div>
         <div class="card-body">
           <h5 class="card-title mb-2">Ruyonga Daniel</h5>
           <div class="card-text mb-3">
@@ -321,7 +321,7 @@
     </div><!--//col-->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
       <div class="card rounded-0">
-        <div class="speaker-img"><img src="assets/images/organisers/IMG_20200207_123840 - Magak Emmanuel.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="speaker-img"><img src="assets/images/organisers/IMG_20200207_123840 - Magak Emmanuel.jpg" class="card-img-top rounded-0" alt="logo"></div>
         <div class="card-body">
           <h5 class="card-title mb-2">Magak Emmanuel</h5>
           <div class="card-text mb-3">
@@ -340,7 +340,7 @@
     </div><!--//col-->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
       <div class="card rounded-0">
-        <div class="speaker-img"><img src="assets/images/organisers/imo - Imo Inyang.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="speaker-img"><img src="assets/images/organisers/imo.png" class="card-img-top rounded-0" alt="logo"></div>
         <div class="card-body">
           <h5 class="card-title mb-2">Imo Inyang</h5>
           <div class="card-text mb-3">
