--- a/about.html
+++ b/about.html
@@ -110,9 +110,9 @@
 <section id="about-section" class="about-section section theme-bg-light">
   <div class="container">
     <h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
-    <div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
+    <div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts from Africa and across the globe for collaboration, networking and learning.
       <br> <br>
-      ElixirKenya brings you the first of many editions of Elixir Conference Africa. <br>
+      Elixir communities around Africa bring you the first of many editions of ElixirConfAfr. <br>
       This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
       <br><br>
       ElixConfAfr will be held at Greenwich Meridian Time (GMT) to suit attendees all over Africa for a two-day event filled with display of talks and workshops from amazing speakers and teachers.
@@ -129,7 +129,7 @@
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
         <div class="card rounded-0">
-          <div class="speaker-img"><img src="assets/images/organisers/siguinwhiteblurredbg.png" class="card-img-top rounded-0" alt="lead conference organier"></div>
+          <div class="speaker-img"><img src="assets/images/organisers/siguinwhiteblurredbg.jpg" class="card-img-top rounded-0" alt="lead conference organier"></div>
           <div class="card-body">
             <h5 class="card-title mb-2">Sigu Magwa</h5>
             <div class="card-text mb-3">
@@ -393,8 +393,7 @@
       <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
-    <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
-
+    <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Communities in Africa</a></small>
   </div><!--//container-->
 </footer>
 
