Fix Photosresize photos and reduce contrast on shouting banckgrounds (#25)
* Fix Photosresize photos and reduce contrast on shouting banckgrounds

* The About Section
Optimise organizers photos
Replace some photos with desired ones
Embed a YouTube video on the home page
Change description
Change footer

--- a/index.html
+++ b/index.html
@@ -129,16 +129,38 @@
 	<section id="about-section" class="about-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
-			<div class="section-intro single-col-max mx-auto mb-4">
-				ElixirKenya brings you the first of many editions of Elixir Conference Africa. <br> <br>
-				This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
-				<br>
-				<br>
-				ElixirConfAfr 2021 will be held at Greenwich Meridian Time (GMT) to suit attendees all over Africa for a two-day event filled with display of talks and workshops from amazing speakers and teachers.
 
-			</div>
+			<div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts from Africa and across the globe for collaboration, networking and learning.
+				<br> <br>
+				Elixir communities around Africa bring you the first of many editions of ElixirConfAfr. <br>
+				This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
+				<br><br>
+				ElixConfAfr will be held at Greenwich Meridian Time (GMT) to suit attendees all over Africa for a two-day event filled with display of talks and workshops from amazing speakers and teachers.
+			  </div>
+
 			<div class="about-cta text-center mb-5"><a class="btn btn-secondary btn-lg  mb-5" href="about.html">Read More</a></div>
 		</div><!--//container-->
+
+		<div class="media-block theme-bg-primary py-5">
+			<div class="container">
+				<h4 class="text-white text-center mb-3">What to Expect</h4>
+				<div class="section-intro text-center single-col-max mx-auto text-white mb-5">Expect some amazing talks and workshops and so much more from spectacular people all over the world</div>
+				<div class="row">
+					<div class="col-12 col-md-6 mb-3">
+						<div class="embed-responsive embed-responsive-16by9">
+
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/3_pQ3CS85Lw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+						</div><!--//embed-responsive -->
+					</div><!--//col-->
+					<div class="col-12 col-md-6 mb-md-5">
+						<div class="embed-responsive embed-responsive-16by9">
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NPYqnGNO_zw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+						</div><!--//embed-responsive -->
+					</div><!--//col-->
+				</div><!--//row-->
+			</div><!--//container-->
+		</div><!--//media-block-->
 	</section><!--//about-section-->
 
 
@@ -338,7 +360,7 @@
 				<li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
 			</ul><!--//social-list-->
 
-			<small class="copyright">Made with <i class="fas fa-heart" style="color: #5A1E5B;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
+			<small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Communities in Africa</a></small>
 
 		</div><!--//container-->
 	</footer>
