update organizers list

--- a/about.html
+++ b/about.html
@@ -109,11 +109,7 @@
 <section id="about-section" class="about-section section theme-bg-light">
   <div class="container">
     <h3 class="section-heading text-center mb-3">About <img width="280px" style="margin-top: -35px;" src="/assets/images/lanscape-logo-purple.png" alt="img" ></h3>
-<<<<<<< HEAD
-    <div class="section-intro single-col-max mx-auto mb-4">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts from Africa and across the globe for collaboration, networking and learning.
-=======
     <div class="section-intro single-col-max mx-auto mb-4 pb-5">ElixirConfAfr is an annual conference bringing together BEAM enthusiasts for collaboration, networking and learning.
->>>>>>> d3cc8fdec652426a7dd2814841adc953142fd45a
       <br> <br>
       Elixir communities around Africa bring you the first of many editions of ElixirConfAfr. <br>
       This conference will be held virtually and is open to anyone from anywhere around the world, the event will incorporate among other things, technical and non technical talks, with the main focus being how Elixir has been used to craft technological solutions aimed at addressing problems and issues within and outside of Africa.
@@ -282,8 +278,6 @@
           </div>
         </div><!--//card-->
       </div><!--//col-->
-    </div><!--//row-->
-    <div class="row">
     <div class="col-12 col-md-6 col-lg-3 mb-4">
       <div class="card rounded-0">
         <div class="speaker-img"><img src="assets/images/organisers/GettyOrawoblurredbg.png" class="card-img-top rounded-0" alt="logo"></div>
@@ -360,6 +354,44 @@
         </div>
       </div><!--//card-->
     </div><!--//col-->
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <div class="card rounded-0">
+        <div class="speaker-img"><img src="assets/images/organisers/wayua.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="card-body">
+          <h5 class="card-title mb-2">Jackie Kaunda</h5>
+          <div class="card-text mb-3">
+            
+            <div class="meta">Speakers' Manager</div>
+          </div><!--//card-text-->
+        </div><!--//card-->
+        <div class="card-footer text-muted">
+          <ul class="social-list list-inline mb-0">
+            <li class="list-inline-item"><a target="_blank" href="https://twitter.com/jacquiekaunda"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/jackline-kaunda-54779b157/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/"><i class="fab fa-github fa-fw"></i></a></li>
+          </ul><!--//social-list-->
+        </div>
+      </div><!--//card-->
+    </div><!--//col-->    
+    <div class="col-12 col-md-6 col-lg-3 mb-4">
+      <div class="card rounded-0">
+        <div class="speaker-img"><img src="assets/images/organisers/frank.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
+        <div class="card-body">
+          <h5 class="card-title mb-2">Frank Midigo</h5>
+          <div class="card-text mb-3">
+            <div class="meta">Time Keeper</div>
+            <div class="meta">IT Support</div>
+          </div><!--//card-text-->
+        </div><!--//card-->
+        <div class="card-footer text-muted">
+          <ul class="social-list list-inline mb-0">
+            <li class="list-inline-item"><a target="_blank" href="https://twitter.com/midigo_frank"><i class="fab fa-twitter fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://www.linkedin.com/in/midigo-f-023450123/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+            <li class="list-inline-item"><a target="_blank" href="https://github.com/MidigoF"><i class="fab fa-github fa-fw"></i></a></li>
+          </ul><!--//social-list-->
+        </div>
+      </div><!--//card-->
+    </div><!--//col-->          
   </div><!--row-->
   </div><!--//container-->
 
