disable call for speakers

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 				<div class="hero-intro mb-4">The Premiere Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
 					<a class="btn btn-secondary btn-lg mb-2" href="http://bit.ly/elixir-conf-africa" target="_blank">Get Tickets</a>
-					<a class="btn btn-secondary btn-lg mb-2" href="https://sessionize.com/elixir-conf-africa" target="_blank">Call For Speakers</a>
+					<a class="btn btn-secondary btn-lg mb-2 disabled" href="https://sessionize.com/elixir-conf-africa" target="_blank">Call For Speakers</a>
 				</div>
 
 			</div><!--//hero-text-block-->
