embed keynote speaker video

--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
 		<div class="container">
 			<div class="hero-text-block">
 				<h1 class="hero-heading mb-2">ElixirConfAfr 2021</h1>
-				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>7th - 8th May <i class="fas fa-map-marker-alt mx-2"></i>Virtual</div>
+				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>7th May 2021 Conference<br>
+					<i class="far fa-calendar-alt mr-2"></i>8th May 2021 Workshop<br>
+					<i class="fas fa-map-marker-alt mx-2"></i>Virtual</div>
 				<div class="hero-intro mb-4">The Premiere Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
 					<a class="btn btn-secondary btn-lg mb-2" href="http://bit.ly/elixir-conf-africa" target="_blank">Get Tickets</a>
@@ -149,13 +151,13 @@
 					<div class="col-12 col-md-6 mb-3">
 						<div class="embed-responsive embed-responsive-16by9">
 
-							<iframe width="560" height="315" src="https://www.youtube.com/embed/3_pQ3CS85Lw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/3_pQ3CS85Lw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 						</div><!--//embed-responsive -->
 					</div><!--//col-->
 					<div class="col-12 col-md-6 mb-md-5">
 						<div class="embed-responsive embed-responsive-16by9">
-							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/NPYqnGNO_zw" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+							<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/vVWGfQoZft0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						</div><!--//embed-responsive -->
 					</div><!--//col-->
 				</div><!--//row-->
