add Elixirconfafrica code of conduct

--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 				<li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
 				<li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
 			</ul><!--//social-list-->
-
+			<small><a href="https://github.com/beamkenya/elixirconfafrica_code_of_conduct/blob/main/README.md" target="_blank">Code of Conduct</a></small><br>
 			<small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Communities in Africa</a></small>
 
 		</div><!--//container-->
