add binary loggin and smart logic to sponsors

--- a/index.html
+++ b/index.html
@@ -338,15 +338,32 @@
 	<section id="sponsors-section" class="sponsors-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Sponsors</h3>
-			<div class="section-intro text-center single-col-max mx-auto mb-5">
-				Want to become a sponsor? Take a look at our <a href="ElixirConf Africa Prospectus.pdf" download><b>Sponsorship prospectus</b></a>
-				to view all the packages we have. You are also more than welcome to sponsor us on your own terms. Just shoot us an email to get started.
+			<div class="section-intro text-center single-col-max mx-auto mb-5" style="color: #4f5252;">
+				<strong>Community Builder Sponsors</strong>
 			</div>
+			<div class="row logos justify-content-center">
+				<div class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/smartlogic.png" alt="logos"></div>
+				<div class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/BN-blog-logo.png" alt="logos"></div>
+
+			</div><!--//row-->
+			<div class="section-intro text-center single-col-max mx-auto mb-5">
+			</div>
+			<div class="section-intro text-center single-col-max mx-auto mb-5" style="color: #4f5252;">
+				Want to become a sponsor? Take a look at our <a href="ElixirConf Africa Prospectus.pdf" download><b>Sponsorship prospectus</b></a>
+			</div>
+			<div class="sponsors-cta text-center pt-5"><a class="btn-secondary btn btn-lg" href="mailto:jambo@elixirconf.africa">Become A Sponsor</a></div>
+		</div><!--//container-->
+	</section><!--//sponsors-section-->
+
+	<section id="sponsors-section" class="sponsors-section section">
+		<div class="container">
+			<h3 class="section-heading text-center mb-3">Partners</h3>
+			
 			<div class="row logos justify-content-center">
 				<div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/podiilogo.png" alt="logos"></div>
 
 			</div><!--//row-->
-			<div class="sponsors-cta text-center pt-5"><a class="btn-secondary btn btn-lg" href="mailto:jambo@elixirconf.africa">Become A Sponsor</a></div>
+			
 		</div><!--//container-->
 	</section><!--//sponsors-section-->
 
