add diversity ticket section

--- a/index.html
+++ b/index.html
@@ -330,7 +330,11 @@
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
-			</div><!--//pricing-->
+      </div><!--//pricing-->
+      
+      <h3 class="section-heading text-center mb-3">Diversity & Inclusion</h3>
+      <div class="section-intro single-col-max mx-auto text-center mb-4">Aimed at supporting the under-represented in tech and those who cannot afford to purchase a ticket to the event. The deadline for application is 30th April 2020.</div>
+      <div class="tickets-cta text-center pt-5"><a class="btn-secondary btn btn-lg" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGPiG3L7N_boLeeoxgbx__WFzRC7j1AopeneitG6IWCR7LcA/viewform?usp=sf_link">Apply</a></div>
 		</div>
   </section>
 
