resize and optimise images add link to speaker section

--- a/index.html
+++ b/index.html
@@ -87,9 +87,10 @@
 
 							<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-<!--							<li class="nav-item"><a class="nav-link" href="#">Speakers</a></li>-->
-<!--							<li class="nav-item"><a class="nav-link" href="#">Schedule</a></li>-->
+							<li class="nav-item"><a class="nav-link" href="#speakers-section">Speakers</a></li>
+							<!-- <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li> -->
 							<li class="nav-item"><a class="nav-link scrollto" href="#sponsors-section">Sponsors</a></li>
+							
 						</ul><!--//nav-->
 					</div><!--//navabr-collapse-->
 
@@ -114,8 +115,8 @@
 		<div class="container">
 			<div class="hero-text-block">
 				<h1 class="hero-heading mb-2">ElixirConfAfr 2021</h1>
-				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>7th May 2021 Conference<br>
-					<i class="far fa-calendar-alt mr-2"></i>8th May 2021 Workshop<br>
+				<div class="hero-meta mb-3"><i class="far fa-calendar-alt mr-2"></i>Conference: 7th May 2021<br>
+					<i class="far fa-calendar-alt mr-2"></i>Workshop: 8th May 2021<br>
 					<i class="fas fa-map-marker-alt mx-2"></i>Virtual</div>
 				<div class="hero-intro mb-4">The Premiere Elixir Conference in <br> Africa</div>
 				<div class="hero-cta">
@@ -145,7 +146,7 @@
 
 		<div class="media-block theme-bg-primary py-5">
 			<div class="container">
-				<h4 class="text-white text-center mb-3">What to Expect</h4>
+				<h4 class="text-white text-center mb-3">What's in it for you</h4>
 				<div class="section-intro text-center single-col-max mx-auto text-white mb-5">Expect some amazing talks and workshops and so much more from spectacular people all over the world</div>
 				<div class="row">
 					<div class="col-12 col-md-6 mb-3">
@@ -168,7 +169,7 @@
 
 <section id="speakers-section" class="speakers-section section">
   <div class="container">
-    <h3 class="section-heading text-center mb-3">Keynote Speakers</h3>
+    <h3 class="section-heading text-center mb-3"> ElixirConfAfrica Keynote Speakers</h3>
     <div class="section-intro text-center single-col-max mx-auto mb-5">Here are the amazing keynote speakers for ElixirConf Africa</div>
     <div class="row">
       <div class="col-12 col-md-6 col-lg-3 mb-4">
@@ -251,6 +252,143 @@
         </div><!--//card-->
       </div><!--//col-->
     </div>
+  </div>
+	<br><br>
+  <div class="container">
+    <h3 class="section-heading text-center mb-3"> ElixirConfAfrica Speakers</h3>
+    <div class="section-intro text-center single-col-max mx-auto mb-5">Introducing ElixirConfAfrica Speakers and Coaches</div>
+    <div class="row">
+      <div class="col-lg-6 mb-4">
+        <div class="card rounded-0">
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/John_Invictus(1).jpg" class="card-img-top rounded-0" alt="logo"></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2">John Invictus</h5>
+            <div class="card-text mb-3">
+              <div class="meta"> Elixir Software Developer</div>
+              <div class="meta"> Postagraph</div>
+            </div><!--//card-text-->
+            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div><!--//col-->
+      <div class="col-lg-6 mb-4">
+        <div class="card rounded-0">
+          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Peter_Ullrich.jpeg" class="card-img-top rounded-0" alt="logo"></a>
+          <div class="card-body">
+            <h5 class="card-title mb-2">Peter Ullrich</h5>
+            <div class="card-text mb-3">
+              <div class="meta">Senior Software Engineer</div>
+              <div class="meta">Studitemps GmbH</div>
+            </div><!--//card-text-->
+            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+          </div><!--//card-->
+          <div class="card-footer text-muted">
+            <ul class="social-list list-inline mb-0">
+              <li class="list-inline-item"><a  href="https://twitter.com/pjullrich"><i class="fab fa-twitter fa-fw"></i></a></li>
+              <!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
+            </ul><!--//social-list-->
+          </div>
+        </div><!--//card-->
+      </div>
+      <!--//col-->
+    </div>
+
+	<div class="row">
+		<div class="col-lg-6 mb-4">
+		  <div class="card rounded-0">
+			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Tymon_Tobolski.jpg" class="card-img-top rounded-0" alt="logo"></a>
+			<div class="card-body">
+			  <h5 class="card-title mb-2">Tymon Tobolski</h5>
+			  <div class="card-text mb-3">
+				<div class="meta"> Elixir Software Developer Slack</div>
+				<div class="meta"> Founder of Ubots</div>
+			  </div><!--//card-text-->
+			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+			</div><!--//card-->
+			<div class="card-footer text-muted">
+			  <ul class="social-list list-inline mb-0">
+				<li class="list-inline-item"><a  href="https://twitter.com/iteamon"><i class="fab fa-twitter fa-fw"></i></a></li>
+				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+				<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
+			  </ul><!--//social-list-->
+			</div>
+		  </div><!--//card-->
+		</div><!--//col-->
+		<div class="col-lg-6 mb-4">
+		  <div class="card rounded-0">
+			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Jeffrey_Matthias.jpg" class="card-img-top rounded-0" alt="logo"></a>
+			<div class="card-body">
+			  <h5 class="card-title mb-2">Jeffrey Mathias</h5>
+			  <div class="card-text mb-3">
+				<div class="meta">Staff Engineer at Community.com</div>
+				<div class="meta">Co-author of Testing Elixir</div>
+			  </div><!--//card-text-->
+			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+			</div><!--//card-->
+			<div class="card-footer text-muted">
+			  <ul class="social-list list-inline mb-0">
+				<li class="list-inline-item"><a  href="https://twitter.com/idlehands"><i class="fab fa-twitter fa-fw"></i></a></li>
+				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+				<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
+			  </ul><!--//social-list-->
+			</div>
+		  </div><!--//card-->
+		</div>
+		<!--//col-->
+	  </div>
+
+	  <div class="row">
+		<div class="col-lg-6 mb-4">
+		  <div class="card rounded-0">
+			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Imo_Inyang.jpg" class="card-img-top rounded-0" alt="logo"></a>
+			<div class="card-body">
+			  <h5 class="card-title mb-2">Imo Inyang</h5>
+			  <div class="card-text mb-3">
+				<div class="meta"> Elixir Software Developer</div>
+				<!-- <div class="meta"> Founder of Ubots</div> -->
+			  </div><!--//card-text-->
+			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+			</div><!--//card-->
+			<div class="card-footer text-muted">
+			  <ul class="social-list list-inline mb-0">
+				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
+				<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+				<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
+			  </ul><!--//social-list-->
+			</div>
+		  </div><!--//card-->
+		</div><!--//col-->
+		<div class="col-lg-6 mb-4">
+		  <div class="card rounded-0">
+			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Nikola_Begedin(1).jpg" class="card-img-top rounded-0" alt="logo"></a>
+			<div class="card-body">
+			  <h5 class="card-title mb-2">Nikola Begedin</h5>
+			  <div class="card-text mb-3">
+				<div class="meta">Fullstack Developer V7Labs</div>
+				<!-- <div class="meta">Co-author of Testing Elixir</div> -->
+			  </div><!--//card-text-->
+			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+			</div><!--//card-->
+			<div class="card-footer text-muted">
+			  <ul class="social-list list-inline mb-0">
+				<li class="list-inline-item"><a  href="https://twitter.com/begedinnikola"><i class="fab fa-twitter fa-fw"></i></a></li>
+				<li class="list-inline-item"><a  href="https://linkedin.com/in/nikola-begedin-54541036/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
+				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
+			  </ul><!--//social-list-->
+			</div>
+		  </div><!--//card-->
+		</div>
+		<!--//col-->
+	  </div>
+
   </div>
 </section>
 
