ui fixes, speakers page

--- a/about.html
+++ b/about.html
@@ -86,7 +86,7 @@
           <ul class="nav navbar-nav">
             <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
             <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-<!--            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>-->
+            <li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
 <!--            <li class="nav-item"><a class="nav-link" href="schedule.html">Schedule</a></li>-->
             <li class="nav-item"><a class="nav-link scrollto" href="/#sponsors-section">Sponsors</a></li>
           </ul><!--//nav-->
@@ -360,7 +360,7 @@
         <div class="card-body">
           <h5 class="card-title mb-2">Jackie Kaunda</h5>
           <div class="card-text mb-3">
-            
+
             <div class="meta">Speakers' Manager</div>
           </div><!--//card-text-->
         </div><!--//card-->
@@ -372,7 +372,7 @@
           </ul><!--//social-list-->
         </div>
       </div><!--//card-->
-    </div><!--//col-->    
+    </div><!--//col-->
     <div class="col-12 col-md-6 col-lg-3 mb-4">
       <div class="card rounded-0">
         <div class="speaker-img"><img src="assets/images/organisers/frank.jpg" class="card-img-top rounded-0" alt="logo" style="object-fit: cover;"></div>
@@ -391,7 +391,7 @@
           </ul><!--//social-list-->
         </div>
       </div><!--//card-->
-    </div><!--//col-->          
+    </div><!--//col-->
   </div><!--row-->
   </div><!--//container-->
 
@@ -423,9 +423,9 @@
 
     <ul class="social-list list-inline mb-4">
       <!--				<li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>-->
-      <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-      <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
-      <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
+      <li class="list-inline-item mr-3"><a target="_blank" href="https://twitter.com/ElixirConfAfric"><i class="fab fa-twitter fa-fw"></i></a></li>
+      <li class="list-inline-item mr-3"><a target="_blank" href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
+      <li class="list-inline-item mr-0"><a target="_blank" href="https://www.youtube.com/channel/UCpopan9eiGQJeU6QsZSzTsg"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
     <small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Communities in Africa</a></small>
