--- a/index.html
+++ b/index.html
@@ -87,10 +87,10 @@
 
 							<li class="nav-item"><a class="nav-link" href="/">Home</a></li>
 							<li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-							<li class="nav-item"><a class="nav-link" href="#speakers-section">Speakers</a></li>
+							<li class="nav-item"><a class="nav-link" href="speakers.html">Speakers</a></li>
 							<!-- <li class="nav-item"><a class="nav-link" href="#">Schedule</a></li> -->
 							<li class="nav-item"><a class="nav-link scrollto" href="#sponsors-section">Sponsors</a></li>
-							
+
 						</ul><!--//nav-->
 					</div><!--//navabr-collapse-->
 
@@ -181,7 +181,7 @@
               <div class="meta"> Creator of Elixir and Plug </div>
               <div class="meta"> Member of Ecto, ExDoc, and Phoenix teams </div>
             </div><!--//card-text-->
-            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -202,7 +202,7 @@
               <div class="meta">OTP+LiveView training; books and vids for Julia and Elixir.
                 Author  Languages in 7 wks, Programming Phoenix LiveView, others.</div>
             </div><!--//card-text-->
-            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -221,7 +221,7 @@
             <div class="card-text mb-3">
               <div class="meta">Founder & Technical Director @ Erlang Solutions, O'Reilly Author</div>
             </div><!--//card-text-->
-            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -240,7 +240,7 @@
             <div class="card-text mb-3">
               <div class="meta">Researcher, author and teacher</div>
             </div><!--//card-text-->
-            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
+<!--            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>-->
           </div><!--//card-->
           <div class="card-footer text-muted">
             <ul class="social-list list-inline mb-0">
@@ -253,143 +253,8 @@
       </div><!--//col-->
     </div>
   </div>
-	<br><br>
-  <div class="container">
-    <h3 class="section-heading text-center mb-3"> ElixirConfAfrica Speakers</h3>
-    <div class="section-intro text-center single-col-max mx-auto mb-5">Introducing ElixirConfAfrica Speakers and Coaches</div>
-    <div class="row">
-      <div class="col-lg-6 mb-4">
-        <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/John_Invictus(1).jpg" class="card-img-top rounded-0" alt="logo"></a>
-          <div class="card-body">
-            <h5 class="card-title mb-2">John Invictus</h5>
-            <div class="card-text mb-3">
-              <div class="meta"> Elixir Software Developer</div>
-              <div class="meta"> Postagraph</div>
-            </div><!--//card-text-->
-            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
-          </div><!--//card-->
-          <div class="card-footer text-muted">
-            <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li>
-            </ul><!--//social-list-->
-          </div>
-        </div><!--//card-->
-      </div><!--//col-->
-      <div class="col-lg-6 mb-4">
-        <div class="card rounded-0">
-          <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Peter_Ullrich.jpeg" class="card-img-top rounded-0" alt="logo"></a>
-          <div class="card-body">
-            <h5 class="card-title mb-2">Peter Ullrich</h5>
-            <div class="card-text mb-3">
-              <div class="meta">Senior Software Engineer</div>
-              <div class="meta">Studitemps GmbH</div>
-            </div><!--//card-text-->
-            <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
-          </div><!--//card-->
-          <div class="card-footer text-muted">
-            <ul class="social-list list-inline mb-0">
-              <li class="list-inline-item"><a  href="https://twitter.com/pjullrich"><i class="fab fa-twitter fa-fw"></i></a></li>
-              <!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-              <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
-            </ul><!--//social-list-->
-          </div>
-        </div><!--//card-->
-      </div>
-      <!--//col-->
-    </div>
+	<div class="speakers-cta text-center py-3"><a class="btn btn-primary btn-lg" href="speakers.html" target="_blank">All Speakers</a></div>
 
-	<div class="row">
-		<div class="col-lg-6 mb-4">
-		  <div class="card rounded-0">
-			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Tymon_Tobolski.jpg" class="card-img-top rounded-0" alt="logo"></a>
-			<div class="card-body">
-			  <h5 class="card-title mb-2">Tymon Tobolski</h5>
-			  <div class="card-text mb-3">
-				<div class="meta"> Elixir Software Developer Slack</div>
-				<div class="meta"> Founder of Ubots</div>
-			  </div><!--//card-text-->
-			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
-			</div><!--//card-->
-			<div class="card-footer text-muted">
-			  <ul class="social-list list-inline mb-0">
-				<li class="list-inline-item"><a  href="https://twitter.com/iteamon"><i class="fab fa-twitter fa-fw"></i></a></li>
-				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-				<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
-			  </ul><!--//social-list-->
-			</div>
-		  </div><!--//card-->
-		</div><!--//col-->
-		<div class="col-lg-6 mb-4">
-		  <div class="card rounded-0">
-			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Jeffrey_Matthias.jpg" class="card-img-top rounded-0" alt="logo"></a>
-			<div class="card-body">
-			  <h5 class="card-title mb-2">Jeffrey Mathias</h5>
-			  <div class="card-text mb-3">
-				<div class="meta">Staff Engineer at Community.com</div>
-				<div class="meta">Co-author of Testing Elixir</div>
-			  </div><!--//card-text-->
-			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
-			</div><!--//card-->
-			<div class="card-footer text-muted">
-			  <ul class="social-list list-inline mb-0">
-				<li class="list-inline-item"><a  href="https://twitter.com/idlehands"><i class="fab fa-twitter fa-fw"></i></a></li>
-				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-				<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
-			  </ul><!--//social-list-->
-			</div>
-		  </div><!--//card-->
-		</div>
-		<!--//col-->
-	  </div>
-
-	  <div class="row">
-		<div class="col-lg-6 mb-4">
-		  <div class="card rounded-0">
-			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Imo_Inyang.jpg" class="card-img-top rounded-0" alt="logo"></a>
-			<div class="card-body">
-			  <h5 class="card-title mb-2">Imo Inyang</h5>
-			  <div class="card-text mb-3">
-				<div class="meta"> Elixir Software Developer</div>
-				<!-- <div class="meta"> Founder of Ubots</div> -->
-			  </div><!--//card-text-->
-			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
-			</div><!--//card-->
-			<div class="card-footer text-muted">
-			  <ul class="social-list list-inline mb-0">
-				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-				<li class="list-inline-item"><a  href="#"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-				<li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
-			  </ul><!--//social-list-->
-			</div>
-		  </div><!--//card-->
-		</div><!--//col-->
-		<div class="col-lg-6 mb-4">
-		  <div class="card rounded-0">
-			<a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1"><img src="assets/images/speakers/Nikola_Begedin(1).jpg" class="card-img-top rounded-0" alt="logo"></a>
-			<div class="card-body">
-			  <h5 class="card-title mb-2">Nikola Begedin</h5>
-			  <div class="card-text mb-3">
-				<div class="meta">Fullstack Developer V7Labs</div>
-				<!-- <div class="meta">Co-author of Testing Elixir</div> -->
-			  </div><!--//card-text-->
-			  <a href="#modal-speaker-1" data-toggle="modal" data-target="#modal-speaker-1">Read more &rarr;</a>
-			</div><!--//card-->
-			<div class="card-footer text-muted">
-			  <ul class="social-list list-inline mb-0">
-				<li class="list-inline-item"><a  href="https://twitter.com/begedinnikola"><i class="fab fa-twitter fa-fw"></i></a></li>
-				<li class="list-inline-item"><a  href="https://linkedin.com/in/nikola-begedin-54541036/"><i class="fab fa-linkedin-in fa-fw"></i></a></li>
-				<!-- <li class="list-inline-item"><a  href="#"><i class="fab fa-github fa-fw"></i></a></li> -->
-			  </ul><!--//social-list-->
-			</div>
-		  </div><!--//card-->
-		</div>
-		<!--//col-->
-	  </div>
-
-  </div>
 </section>
 
 	<section id="tickets-section" class="tickets-section section theme-bg-light">
@@ -398,11 +263,11 @@
 			<div class="section-intro single-col-max mx-auto text-center mb-4">All prices exclude fees</div>
 
 			<div class="row pricing mb-5">
-				<div class="col-12 col-md-4 p-2 p-lg-4">
+				<div class="col-12 col-md-3 p-2 p-lg-3">
 					<div class="card rounded-0 border-0">
 						<div class="card-body p-0">
 							<div class="heading  text-center p-3">
-								<h4 class="text-white mb-0">Super Early Bird</h4>
+								<h4 class="text-white mb-0">Super <br> Early Bird</h4>
 							</div>
 							<div class="info p-3">
 								<div class="price-figure text-center mb-3"><span class="currency">$</span><span class="number">0</span></div>
@@ -416,11 +281,11 @@
 						</div>
 					</div><!--//card-->
         </div><!--//col-->
-				<div class="col-12 col-md-4 p-2 p-lg-4">
+				<div class="col-12 col-md-3 p-2 p-lg-3">
 					<div class="card rounded-0 border-0">
 						<div class="card-body p-0">
 							<div class="heading  text-center p-3">
-								<h4 class="text-white mb-0">Dhahabu ( Swahili for Gold)</h4>
+								<h4 class="text-white mb-0">Dhahabu <br> ( Swahili for Gold)</h4>
 							</div>
 							<div class="info p-3">
 								<div class="price-figure text-center mb-3"><span class="currency">$</span><span class="number">200</span></div>
@@ -434,11 +299,11 @@
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
-				<div class="col-12 col-md-4 p-2 p-lg-4">
+				<div class="col-12 col-md-3 p-2 p-lg-3">
 					<div class="card rounded-0 border-0">
 						<div class="card-body p-0">
 							<div class="heading  text-center p-3">
-								<h4 class="text-white mb-0">Mhangura (Shona for Copper)</h4>
+								<h4 class="text-white mb-0">Mhangura <br> (Shona for Copper)</h4>
 							</div>
 							<div class="info p-3">
 								<div class="price-figure text-center mb-3"><span class="currency">$</span><span class="number">100</span></div>
@@ -452,11 +317,11 @@
 						</div>
 					</div><!--//card-->
 				</div><!--//col-->
-				<div class="col-12 col-md-4 p-2 p-lg-4">
+				<div class="col-12 col-md-3 p-2 p-lg-3">
 					<div class="card card-special rounded-0 border-0">
 						<div class="card-body p-0">
 							<div class="heading  text-center p-3">
-								<h4 class="text-white mb-0">Ekikomo (Luganda for Bronze)</h4>
+								<h4 class="text-white mb-0">Ekikomo <br>(Luganda for Bronze)</h4>
 							</div>
 							<div class="info p-3">
 								<div class="price-figure text-center"><span class="currency">$</span><span class="number">2</span></div>
@@ -471,10 +336,10 @@
 					</div><!--//card-->
 				</div><!--//col-->
       </div><!--//pricing-->
-      
+
       <h3 class="section-heading text-center mb-3">Diversity & Inclusion</h3>
       <div class="section-intro single-col-max mx-auto text-center mb-4">Aimed at supporting the under-represented in tech and those who cannot afford to purchase a ticket to the event. The deadline for application is 30th April 2020.</div>
-      <div class="tickets-cta text-center pt-5"><a class="btn-secondary btn btn-lg" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGPiG3L7N_boLeeoxgbx__WFzRC7j1AopeneitG6IWCR7LcA/viewform?usp=sf_link">Apply</a></div>
+      <div class="tickets-cta text-center pt-2"><a class="btn-secondary btn btn-lg" target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSeGPiG3L7N_boLeeoxgbx__WFzRC7j1AopeneitG6IWCR7LcA/viewform?usp=sf_link">Apply</a></div>
 		</div>
   </section>
 
@@ -486,28 +351,28 @@
 				<strong>Community Builder Sponsors</strong>
 			</div>
 			<div class="row logos justify-content-center">
-				<div class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/smartlogic.png" alt="logos"></div>
-				<div class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/BN-blog-logo.png" alt="logos"></div>
+				<a href="https://smartlogic.io" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/smartlogic.png" alt="logos"></a>
+				<a href="https://binarynoggin.com" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-4"><img src="assets/images/logos/BN-blog-logo.png" alt="logos"></a>
 
 			</div><!--//row-->
-			<div class="section-intro text-center single-col-max mx-auto mb-5">
+			<div class="section-intro text-center single-col-max mx-auto mb-3">
 			</div>
-			<div class="section-intro text-center single-col-max mx-auto mb-5" style="color: #4f5252;">
+			<div class="section-intro text-center single-col-max mx-auto mb-2" style="color: #4f5252;">
 				Want to become a sponsor? Take a look at our <a href="ElixirConf Africa Prospectus.pdf" download><b>Sponsorship prospectus</b></a>
 			</div>
-			<div class="sponsors-cta text-center pt-5"><a class="btn-secondary btn btn-lg" href="mailto:jambo@elixirconf.africa">Become A Sponsor</a></div>
+			<div class="sponsors-cta text-center pt-4"><a class="btn-secondary btn btn-lg" href="mailto:jambo@elixirconf.africa">Become A Sponsor</a></div>
 		</div><!--//container-->
 	</section><!--//sponsors-section-->
 
 	<section id="sponsors-section" class="sponsors-section section">
 		<div class="container">
 			<h3 class="section-heading text-center mb-3">Partners</h3>
-			
+
 			<div class="row logos justify-content-center">
-				<div class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/podiilogo.png" alt="logos"></div>
+				<a href="https://podiihq.com/" target="_blank" rel="noopener" class="logo-item col-6 col-md-4 col-lg-2"><img src="assets/images/logos/podiilogo.png" alt="logos"></a>
 
 			</div><!--//row-->
-			
+
 		</div><!--//container-->
 	</section><!--//sponsors-section-->
 
@@ -516,9 +381,9 @@
 
 			<ul class="social-list list-inline mb-4">
 <!--				<li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>-->
-				<li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-				<li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
-				<li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
+				<li class="list-inline-item mr-3"><a target="_blank" href="https://twitter.com/ElixirConfAfric"><i class="fab fa-twitter fa-fw"></i></a></li>
+				<li class="list-inline-item mr-3"><a target="_blank" href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
+				<li class="list-inline-item mr-0"><a target="_blank" href="https://www.youtube.com/channel/UCpopan9eiGQJeU6QsZSzTsg"><i class="fab fa-youtube fa-fw"></i></a></li>
 			</ul><!--//social-list-->
 			<small><a href="https://github.com/beamkenya/elixirconfafrica_code_of_conduct/blob/main/README.md" target="_blank">Code of Conduct</a></small><br>
 			<small class="copyright">Made with <i class="fas fa-heart" style="color: #EC645E;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Communities in Africa</a></small>
