--- a/schedule.html
+++ b/schedule.html
@@ -294,9 +294,9 @@
 
     <ul class="social-list list-inline mb-4">
       <!--				<li class="list-inline-item mr-3"><a href="#"><i class="fas fa-envelope"></i></a></li>-->
-      <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-twitter fa-fw"></i></a></li>
-      <li class="list-inline-item mr-3"><a href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
-      <li class="list-inline-item mr-0"><a href="#"><i class="fab fa-youtube fa-fw"></i></a></li>
+      <li class="list-inline-item mr-3"><a target="_blank" href="https://twitter.com/ElixirConfAfric"><i class="fab fa-twitter fa-fw"></i></a></li>
+      <li class="list-inline-item mr-3"><a target="_blank" href="#"><i class="fab fa-instagram fa-fw"></i></a></li>
+      <li class="list-inline-item mr-0"><a target="_blank" href="https://www.youtube.com/channel/UCpopan9eiGQJeU6QsZSzTsg"><i class="fab fa-youtube fa-fw"></i></a></li>
     </ul><!--//social-list-->
 
     <small class="copyright">Made with <i class="fas fa-heart" style="color: #5A1E5B;"></i> by <a href="https://github.com/beamkenya" target="_blank">Elixir Kenya</a></small>
